Sizing of logo correct / still working on spacing for links

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,8 +8,6 @@ $font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewrit
 
 body {
     background-color: rgb(29, 36, 36);
-    // background-image: url("https://images.unsplash.com/photo-1504805572947-34fad45aed93?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80");
-    background-size: cover;
 
 }
 
@@ -18,51 +16,36 @@ nav {
     justify-content: center;
     align-items: center;
     height: 125vh;
-
-
-}
-
-#current-time {
-    margin: 20px;
-    // justify-content: normal;
-    font-size: 15px;
-    color: $third-color;
-    position: absolute;
-    bottom: 300px;
-    left: 639px;
-}
-
-
-.mid-nav {
-    height: 500px;
-    width: 150px;
-    // display: inline-flex;
-    display: flex;
-    flex-direction: column;
 }
 
 .logo-container {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+
+    
+}
+#current-time {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
 }
 
-.logo {
-    display: flex;
-    justify-content: center;
-}
 
 img {
-    height: 250px;
-    width: 150px;
-    
+    height: 10vh;
+    width: 25vh;
+    object-fit: cover;
 }
 
 
 .mid-nav-links {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    align-items: flex-start;
+    justify-content: space-between; 
+    align-content: center;
+    gap: 20px;
     list-style: none;
 }
 
@@ -76,32 +59,3 @@ img {
     background-color: $secondary-color;
     color: white;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
